fix: components visibility

--- a/src/assets/styles/helpers/main.scss
+++ b/src/assets/styles/helpers/main.scss
@@ -37,3 +37,11 @@ body {
 		grid-gap: 20px;
 	}
 }
+
+.component {
+	transition: opacity 0.3s ease;
+
+	&:not(.is-visible) {
+		opacity: 0
+	}
+}
